[package]
name = "spriteron"
version = "0.1.0"
authors = ["Zlepper"]
edition = "2018"
description = "Generate sprite ron files for Amethyst"
homepage = "https://github.com/zlepper/spriteron"
repository = "https://github.com/zlepper/spriteron"
readme = "README.md"
keywords = ["amethyst"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
structopt = { version = "0.2" }
png = "0.14"
ron = "0.5"
serde = "1.0"
serde_derive = "1.0"